generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImGuiMultiSelectIO_t ImGuiMultiSelectIO;                        
typedef struct ImGuiPayload_t ImGuiPayload;                                    
typedef int ImGuiDir;             
typedef int ImGuiChildFlags;        
typedef int ImGuiColorEditFlags;    
typedef int ImGuiComboFlags;        
typedef int ImGuiDragDropFlags;     
typedef int ImGuiPopupFlags;        
typedef int ImGuiMultiSelectFlags;  
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableFlags;        
typedef int ImGuiTreeNodeFlags;     
typedef int ImGuiWindowFlags;       
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open , ImGuiWindowFlags flags );
CIMGUI_API float ImGui_CalcItemWidth(void);                                   
CIMGUI_API void  ImGui_BeginGroup(void);                       
CIMGUI_API void  ImGui_AlignTextToFramePadding(void);          
CIMGUI_API bool ImGui_ArrowButton(const char* str_id, ImGuiDir dir);                                           
CIMGUI_API bool ImGui_Checkbox(const char* label, bool* v);
CIMGUI_API bool ImGui_CheckboxFlagsIntPtr(const char* label, int* flags, int flags_value);
CIMGUI_API bool ImGui_CheckboxFlagsUintPtr(const char* label, unsigned int* flags, unsigned int flags_value);
CIMGUI_API void ImGui_Bullet(void);                                                                            
CIMGUI_API bool ImGui_BeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags );
CIMGUI_API bool  ImGui_CollapsingHeader(const char* label, ImGuiTreeNodeFlags flags );                                 
CIMGUI_API bool  ImGui_CollapsingHeaderBoolPtr(const char* label, bool* p_visible, ImGuiTreeNodeFlags flags );         
CIMGUI_API ImGuiMultiSelectIO* ImGui_BeginMultiSelect(ImGuiMultiSelectFlags flags, int selection_size , int items_count );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_BeginMenuBar(void);                                       
CIMGUI_API bool ImGui_BeginMainMenuBar(void);                                   
CIMGUI_API bool ImGui_BeginMenu(const char* label, bool enabled );  
CIMGUI_API bool ImGui_BeginTooltip(void);                                        
CIMGUI_API bool ImGui_BeginItemTooltip(void);                                        
CIMGUI_API bool ImGui_BeginPopup(const char* str_id, ImGuiWindowFlags flags );                                
CIMGUI_API bool ImGui_BeginPopupModal(const char* name, bool* p_open , ImGuiWindowFlags flags );  
CIMGUI_API void ImGui_CloseCurrentPopup(void);                                                                       
CIMGUI_API bool ImGui_BeginPopupContextItem(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_BeginPopupContextWindow(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API bool ImGui_BeginPopupContextVoid(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_BeginTabBar(const char* str_id, ImGuiTabBarFlags flags );    
CIMGUI_API bool ImGui_BeginTabItem(const char* label, bool* p_open , ImGuiTabItemFlags flags ); 
CIMGUI_API bool                ImGui_BeginDragDropSource(ImGuiDragDropFlags flags );                      
CIMGUI_API bool                ImGui_BeginDragDropTarget(void);                                                    
CIMGUI_API const ImGuiPayload* ImGui_AcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags );  
CIMGUI_API void ImGui_BeginDisabled(bool disabled );
CIMGUI_API void   ImGui_ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v);
CIMGUI_API void   ImGui_ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b);
struct ImGuiPayload_t
{
    void*   Data;            
    int     DataSize;        
    ImGuiID SourceId;        
    ImGuiID SourceParentId;  
    int     DataFrameCount;  
    char    DataType[32+1];  
    bool    Preview;         
    bool    Delivery;        
};
struct ImGuiMultiSelectIO_t
{
    ImVector_ImGuiSelectionRequest Requests;       
    ImGuiSelectionUserData         RangeSrcItem;   
    ImGuiSelectionUserData         NavIdItem;      
    bool                           NavIdSelected;  
    bool                           RangeSrcReset;  
    int                            ItemsCount;     
};