generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

bool ImGui_BeginChild_wrap(const char* str_id, ImVec2 const* size, ImGuiChildFlags child_flags, ImGuiWindowFlags window_flags);
bool ImGui_BeginChildID_wrap(ImGuiID id, ImVec2 const* size, ImGuiChildFlags child_flags, ImGuiWindowFlags window_flags);
bool ImGui_BeginListBox_wrap(const char* label, ImVec2 const* size);
bool ImGui_BeginTable_wrap(const char* str_id, int columns, ImGuiTableFlags flags, ImVec2 const* outer_size, float inner_width);
bool ImGui_Button_wrap(const char* label, ImVec2 const* size);
void ImGui_CalcTextSize_wrap(const char* text, const char* text_end, bool hide_text_after_double_hash, float wrap_width, ImVec2* _out);
bool ImGui_ColorButton_wrap(const char* desc_id, ImVec4 const* col, ImGuiColorEditFlags flags, ImVec2 const* size);
ImU32 ImGui_ColorConvertFloat4ToU32_wrap(ImVec4 const* in);
void ImGui_ColorConvertU32ToFloat4_wrap(ImU32 in, ImVec4* _out);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);