generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGui where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: const ImGuiPayload* ImGui::AcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_AcceptDragDropPayload"
  imGui_AcceptDragDropPayload :: CString -> ImGuiDragDropFlags -> IO (Ptr ImGuiPayload)
-- C: void ImGui::AlignTextToFramePadding()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_AlignTextToFramePadding"
  imGui_AlignTextToFramePadding :: IO ()
-- C: bool ImGui::ArrowButton(const char* str_id, ImGuiDir dir)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ArrowButton"
  imGui_ArrowButton :: CString -> ImGuiDir -> IO CBool
-- C: bool ImGui::Begin(const char* name, bool* p_open, ImGuiWindowFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Begin"
  imGui_Begin :: CString -> (Ptr CBool) -> ImGuiWindowFlags -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_BeginChild_wrap"
  c_imGui_BeginChild :: CString -> (Ptr ImVec2) -> ImGuiChildFlags -> ImGuiWindowFlags -> IO CBool

imGui_BeginChild :: CString -> ImVec2 -> ImGuiChildFlags -> ImGuiWindowFlags -> IO CBool
imGui_BeginChild str_id size child_flags window_flags =
  with size $ \_p1 -> c_imGui_BeginChild str_id _p1 child_flags window_flags

foreign import capi unsafe "DearImGuiWrappers.h ImGui_BeginChildID_wrap"
  c_imGui_BeginChildID :: ImGuiID -> (Ptr ImVec2) -> ImGuiChildFlags -> ImGuiWindowFlags -> IO CBool

imGui_BeginChildID :: ImGuiID -> ImVec2 -> ImGuiChildFlags -> ImGuiWindowFlags -> IO CBool
imGui_BeginChildID id_ size child_flags window_flags =
  with size $ \_p1 -> c_imGui_BeginChildID id_ _p1 child_flags window_flags

-- C: bool ImGui::BeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginCombo"
  imGui_BeginCombo :: CString -> CString -> ImGuiComboFlags -> IO CBool
-- C: void ImGui::BeginDisabled(bool disabled)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginDisabled"
  imGui_BeginDisabled :: CBool -> IO ()
-- C: bool ImGui::BeginDragDropSource(ImGuiDragDropFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginDragDropSource"
  imGui_BeginDragDropSource :: ImGuiDragDropFlags -> IO CBool
-- C: bool ImGui::BeginDragDropTarget()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginDragDropTarget"
  imGui_BeginDragDropTarget :: IO CBool
-- C: void ImGui::BeginGroup()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginGroup"
  imGui_BeginGroup :: IO ()
-- C: bool ImGui::BeginItemTooltip()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginItemTooltip"
  imGui_BeginItemTooltip :: IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_BeginListBox_wrap"
  c_imGui_BeginListBox :: CString -> (Ptr ImVec2) -> IO CBool

imGui_BeginListBox :: CString -> ImVec2 -> IO CBool
imGui_BeginListBox label size =
  with size $ \_p1 -> c_imGui_BeginListBox label _p1

-- C: bool ImGui::BeginMainMenuBar()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginMainMenuBar"
  imGui_BeginMainMenuBar :: IO CBool
-- C: bool ImGui::BeginMenu(const char* label, bool enabled)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginMenu"
  imGui_BeginMenu :: CString -> CBool -> IO CBool
-- C: bool ImGui::BeginMenuBar()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginMenuBar"
  imGui_BeginMenuBar :: IO CBool
-- C: ImGuiMultiSelectIO* ImGui::BeginMultiSelect(ImGuiMultiSelectFlags flags, int selection_size, int items_count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginMultiSelect"
  imGui_BeginMultiSelect :: ImGuiMultiSelectFlags -> CInt -> CInt -> IO (Ptr ImGuiMultiSelectIO)
-- C: bool ImGui::BeginPopup(const char* str_id, ImGuiWindowFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginPopup"
  imGui_BeginPopup :: CString -> ImGuiWindowFlags -> IO CBool
-- C: bool ImGui::BeginPopupContextItem(const char* str_id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginPopupContextItem"
  imGui_BeginPopupContextItem :: CString -> ImGuiPopupFlags -> IO CBool
-- C: bool ImGui::BeginPopupContextVoid(const char* str_id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginPopupContextVoid"
  imGui_BeginPopupContextVoid :: CString -> ImGuiPopupFlags -> IO CBool
-- C: bool ImGui::BeginPopupContextWindow(const char* str_id, ImGuiPopupFlags popup_flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginPopupContextWindow"
  imGui_BeginPopupContextWindow :: CString -> ImGuiPopupFlags -> IO CBool
-- C: bool ImGui::BeginPopupModal(const char* name, bool* p_open, ImGuiWindowFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginPopupModal"
  imGui_BeginPopupModal :: CString -> (Ptr CBool) -> ImGuiWindowFlags -> IO CBool
-- C: bool ImGui::BeginTabBar(const char* str_id, ImGuiTabBarFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginTabBar"
  imGui_BeginTabBar :: CString -> ImGuiTabBarFlags -> IO CBool
-- C: bool ImGui::BeginTabItem(const char* label, bool* p_open, ImGuiTabItemFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginTabItem"
  imGui_BeginTabItem :: CString -> (Ptr CBool) -> ImGuiTabItemFlags -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_BeginTable_wrap"
  c_imGui_BeginTable :: CString -> CInt -> ImGuiTableFlags -> (Ptr ImVec2) -> CFloat -> IO CBool

imGui_BeginTable :: CString -> CInt -> ImGuiTableFlags -> ImVec2 -> CFloat -> IO CBool
imGui_BeginTable str_id columns flags outer_size inner_width =
  with outer_size $ \_p3 -> c_imGui_BeginTable str_id columns flags _p3 inner_width

-- C: bool ImGui::BeginTooltip()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_BeginTooltip"
  imGui_BeginTooltip :: IO CBool
-- C: void ImGui::Bullet()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Bullet"
  imGui_Bullet :: IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_Button_wrap"
  c_imGui_Button :: CString -> (Ptr ImVec2) -> IO CBool

imGui_Button :: CString -> ImVec2 -> IO CBool
imGui_Button label size =
  with size $ \_p1 -> c_imGui_Button label _p1

-- C: float ImGui::CalcItemWidth()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CalcItemWidth"
  imGui_CalcItemWidth :: IO CFloat
foreign import capi unsafe "DearImGuiWrappers.h ImGui_CalcTextSize_wrap"
  c_imGui_CalcTextSize :: CString -> CString -> CBool -> CFloat -> (Ptr ImVec2) -> IO ()

imGui_CalcTextSize :: CString -> CString -> CBool -> CFloat -> IO ImVec2
imGui_CalcTextSize text text_end hide_text_after_double_hash wrap_width =
  alloca $ \_pOut -> c_imGui_CalcTextSize text text_end hide_text_after_double_hash wrap_width _pOut >> peek _pOut

-- C: bool ImGui::Checkbox(const char* label, bool* v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Checkbox"
  imGui_Checkbox :: CString -> (Ptr CBool) -> IO CBool
-- C: bool ImGui::CheckboxFlags(const char* label, int* flags, int flags_value)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CheckboxFlagsIntPtr"
  imGui_CheckboxFlagsIntPtr :: CString -> (Ptr CInt) -> CInt -> IO CBool
-- C: bool ImGui::CheckboxFlags(const char* label, unsigned int* flags, unsigned int flags_value)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CheckboxFlagsUintPtr"
  imGui_CheckboxFlagsUintPtr :: CString -> (Ptr CUInt) -> CUInt -> IO CBool
-- C: void ImGui::CloseCurrentPopup()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CloseCurrentPopup"
  imGui_CloseCurrentPopup :: IO ()
-- C: bool ImGui::CollapsingHeader(const char* label, ImGuiTreeNodeFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CollapsingHeader"
  imGui_CollapsingHeader :: CString -> ImGuiTreeNodeFlags -> IO CBool
-- C: bool ImGui::CollapsingHeader(const char* label, bool* p_visible, ImGuiTreeNodeFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_CollapsingHeaderBoolPtr"
  imGui_CollapsingHeaderBoolPtr :: CString -> (Ptr CBool) -> ImGuiTreeNodeFlags -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ColorButton_wrap"
  c_imGui_ColorButton :: CString -> (Ptr ImVec4) -> ImGuiColorEditFlags -> (Ptr ImVec2) -> IO CBool

imGui_ColorButton :: CString -> ImVec4 -> ImGuiColorEditFlags -> ImVec2 -> IO CBool
imGui_ColorButton desc_id col flags size =
  with col $ \_p1 -> with size $ \_p3 -> c_imGui_ColorButton desc_id _p1 flags _p3

foreign import capi unsafe "DearImGuiWrappers.h ImGui_ColorConvertFloat4ToU32_wrap"
  c_imGui_ColorConvertFloat4ToU32 :: (Ptr ImVec4) -> IO ImU32

imGui_ColorConvertFloat4ToU32 :: ImVec4 -> IO ImU32
imGui_ColorConvertFloat4ToU32 in_ =
  with in_ $ \_p0 -> c_imGui_ColorConvertFloat4ToU32 _p0

-- C: void ImGui::ColorConvertHSVtoRGB(float h, float s, float v, float* out_r, float* out_g, float* out_b)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ColorConvertHSVtoRGB"
  imGui_ColorConvertHSVtoRGB :: CFloat -> CFloat -> CFloat -> (Ptr CFloat) -> (Ptr CFloat) -> (Ptr CFloat) -> IO ()
-- C: void ImGui::ColorConvertRGBtoHSV(float r, float g, float b, float* out_h, float* out_s, float* out_v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ColorConvertRGBtoHSV"
  imGui_ColorConvertRGBtoHSV :: CFloat -> CFloat -> CFloat -> (Ptr CFloat) -> (Ptr CFloat) -> (Ptr CFloat) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ColorConvertU32ToFloat4_wrap"
  c_imGui_ColorConvertU32ToFloat4 :: ImU32 -> (Ptr ImVec4) -> IO ()

imGui_ColorConvertU32ToFloat4 :: ImU32 -> IO ImVec4
imGui_ColorConvertU32ToFloat4 in_ =
  alloca $ \_pOut -> c_imGui_ColorConvertU32ToFloat4 in_ _pOut >> peek _pOut
